@@ -17,27 +17,31 @@ import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.ccd.ApplicationParams;
 import uk.gov.hmcts.ccd.WireMockBaseTest;
 import uk.gov.hmcts.ccd.data.SecurityUtils;
+import uk.gov.hmcts.ccd.domain.model.std.CaseAssignedUserRole;
+import uk.gov.hmcts.ccd.domain.service.caseaccess.CaseAccessOperation;
 import uk.gov.hmcts.ccd.v2.external.controller.CaseAssignedUserRolesController;
 import uk.gov.hmcts.ccd.v2.external.controller.TestIdamConfiguration;
 
-import java.util.Arrays;
+import java.util.List;
 
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 @Provider("ccdDataStoreAPI_caseAssignedUserRoles")
-@PactBroker(scheme = "${PACT_BROKER_SCHEME:http}",
-    host = "${PACT_BROKER_URL:localhost}", port = "${PACT_BROKER_PORT:80}", consumerVersionSelectors = {
-    @VersionSelector(tag = "master")})
+@PactBroker(url = "${PACT_BROKER_FULL_URL:http://localhost:9292}",
+    consumerVersionSelectors = {@VersionSelector(tag = "${PACT_BRANCH_NAME:Dev}")})
 @TestPropertySource(locations = "/application.properties")
 @WebMvcTest({CaseAssignedUserRolesController.class})
 @AutoConfigureMockMvc(addFilters = false)
 @ContextConfiguration(classes = {CaseAssignedUserRolesProviderTestContext.class, TestIdamConfiguration.class})
 @IgnoreNoPactsToVerify
 @ActiveProfiles("CASE_ASSIGNED")
+@ExtendWith(SpringExtension.class)
 public class CaseAssignedUserRolesProviderTest extends WireMockBaseTest {
 
     @Autowired
@@ -49,6 +53,9 @@ public class CaseAssignedUserRolesProviderTest extends WireMockBaseTest {
     @Autowired
     CaseAssignedUserRolesController caseAssignedUserRolesController;
 
+    @Autowired
+    CaseAccessOperation caseAccessOperation;
+
     @TestTemplate
     @ExtendWith(PactVerificationInvocationContextProvider.class)
     void pactVerificationTestTemplate(PactVerificationContext context) {
@@ -59,7 +66,7 @@ public class CaseAssignedUserRolesProviderTest extends WireMockBaseTest {
 
     @BeforeEach
     void before(PactVerificationContext context) {
-        //System.getProperties().setProperty("pact.verifier.publishResults", "true");
+        System.getProperties().setProperty("pact.verifier.publishResults", "true");
         MockMvcTestTarget testTarget = new MockMvcTestTarget();
         testTarget.setControllers(
             caseAssignedUserRolesController);
@@ -71,6 +78,12 @@ public class CaseAssignedUserRolesProviderTest extends WireMockBaseTest {
     @State("A User Role exists for a Case")
     public void setUpUserRoleExists() {
         when(securityUtils.getServiceNameFromS2SToken(anyString())).thenReturn("serviceName");
-        when(applicationParams.getAuthorisedServicesForCaseUserRoles()).thenReturn(Arrays.asList("serviceName"));
+        when(applicationParams.getAuthorisedServicesForCaseUserRoles()).thenReturn(List.of("serviceName"));
+
+        String caseId = "1583841721773828";
+        String userId = "0a5874a4-3f38-4bbd-ba4c";
+        String caseRole = "[CREATOR]";
+        CaseAssignedUserRole caseAssignedUserRole = new CaseAssignedUserRole(caseId, userId, caseRole);
+        when(caseAccessOperation.findCaseUserRoles(anyList(), anyList())).thenReturn(List.of(caseAssignedUserRole));
     }
 }
